--- a/todo/index.html
+++ b/todo/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>JavaScript -- To Do List</title>
+    <title> To Do </title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Titillium+Web">
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/style.css">
@@ -27,7 +27,7 @@
         </div>
         <div class="add-to-do">
             <i class="fa fa-plus-circle"></i>
-            <input type="text" id="input" placeholder="Add a to-do">
+            <input type="text", id="input" placeholder="Add a to-do">
         </div>
     </div>
     <script src="js/app.js"></script>
